# EMG_dataread

./: README.md  classes.py  main.py  pyproject.toml  workflow.py
AGSM/: Data_manipulation_and_plotting.py  Data_read_from_existing_file.py  classes.py
Workflow_examples/: Create_filtered_plot.py
src/: classes.py  workflow.py
tests/: test.py
