[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mayahar"
version = "0.0.1"
authors = [
  { name="Maya Harel", email="Maya11harel@gmail.com" },
]
description = "The following package was created to analyse information recieved from EMGs during AGSM training"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mayahar/EMG_dataread"
"TMSi repository" = "https://gitlab.com/tmsi/tmsi-python-interface/-/tree/main/examples_SAGA"
"Download TMSi package" = "https://info.tmsi.com/download-tmsi-python-interface-saga"